feat: fix up some styling on user coin

--- a/libs/ui-common/src/lib/user-coin/user-coin.component.scss
+++ b/libs/ui-common/src/lib/user-coin/user-coin.component.scss
@@ -1,5 +1,10 @@
 :host {
+  display: block;
+  width: 200px;
   > a {
+    display: grid;
+    justify-items: center;
+    text-decoration: none;
     > img {
       border-radius: 50%;
       width: 94%;
