clean up stack, button, and episode detail view

--- a/libs/ui-common/src/lib/button/button.component.html
+++ b/libs/ui-common/src/lib/button/button.component.html
@@ -6,6 +6,22 @@
     </path>
   </svg></icon> -->
 
-<button>
-  Our default Button
+<!-- 
+<aa-stack>
+  <button>
+    <ng-content></ng-content>
+  </button>
+
+  <button>
+    Default Button
+  </button>
+</aa-stack> -->
+
+
+<!-- <button>
+  <ng-content></ng-content>
 </button>
+
+<button [(ngModel)]="text">{{text}}</button> -->
+
+<ng-content></ng-content>
