--- a/libs/ui-common/src/lib/episode-details/episode-details.component.scss
+++ b/libs/ui-common/src/lib/episode-details/episode-details.component.scss
@@ -7,7 +7,7 @@
 @import 'libs/ui-common/src/lib/common-styles.scss';
 
 a {
-  font-size: 10px;
+  font-size: $squirrel;
   font-weight: 700;
   color: #835151;
   transition: color .3s ease;
@@ -20,52 +20,40 @@ a {
 }
 
 
-[element="main"] {
+main {
   padding: 40px 20px;
   max-width: 400px;
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: $squirrel;
 
   position: relative;
 }
 
-[element="main"] > * {
+main > * {
   // position: relative;
   z-index: 3;
 }
 
-[element="main"]:before {
+main:before {
   content: '';
     position: absolute;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
-    background-image: linear-gradient(
-      45deg,
-      hsl(240deg 100% 20%) 0%,
-      hsl(289deg 100% 21%) 11%,
-      hsl(315deg 100% 27%) 22%,
-      hsl(329deg 100% 36%) 33%,
-      hsl(337deg 100% 43%) 44%,
-      hsl(357deg 91% 59%) 56%,
-      hsl(17deg 100% 59%) 67%,
-      hsl(34deg 100% 53%) 78%,
-      hsl(45deg 100% 50%) 89%,
-      hsl(55deg 100% 50%) 100%
-    );
+    background-image: linear-gradient( 45deg, hsl(214deg 91% 87%) 0%, hsl(214deg 84% 84%) 11%, hsl(214deg 79% 81%) 22%, hsl(213deg 76% 77%) 33%, hsl(212deg 74% 74%) 44%, hsl(212deg 72% 71%) 56%, hsl(211deg 70% 67%) 67%, hsl(210deg 70% 63%) 78%, hsl(209deg 69% 59%) 89%, hsl(207deg 69% 54%) 100% );
     border-radius: 7px;
     z-index: 0;
 }
 
-[element="main"]:after {
+main:after {
     content: '';
     position: absolute;
-    top: 1px;
-    right: 1px;
-    bottom: 1px;
-    left: 1px;
+    top: 3px;
+    right: 3px;
+    bottom: 3px;
+    left: 3px;
     border-radius: 5px;
     background: #fbfbfb;
     z-index: 1;
@@ -77,7 +65,7 @@ label {
 }
 
 p {
-  font-size: 16px;
+  font-size: calc($squirrel + 2px);
   font-weight: 400;
   color: #343a40;
 }
