remove outdated comments

--- a/libs/ui-common/src/lib/episode-details/episode-details.component.html
+++ b/libs/ui-common/src/lib/episode-details/episode-details.component.html
@@ -1,35 +1,33 @@
-<!-- TODO: separate out our individual elements to their own stories/components -->
+<main aa-stack>
 
-<main element="main">
-
-  <aa-stack>
+  <section aa-stack>
     <label>Email</label>
     <ul>
       <li>testing@testing.com</li>
     </ul>
-  </aa-stack>
+  </section>
 
-  <aa-stack>
+  <section aa-stack>
     <label>StreamYard Link</label>
     <a href="">streamyard.com/link</a>
-  </aa-stack>
+  </section>
 
-  <aa-stack>
+  <section aa-stack>
     <label>Invitee Time Zone</label>
     <p>Invitee Time Zone</p>
-  </aa-stack>
+  </section>
 
-  <aa-stack>
+  <section aa-stack>
     <label>Additional Notes</label>
     <p>Dolor sit amet consectetur adipiscing. Quam id leo in vitae turpis massa sed. Adipiscing diam donec adipiscing tristique risus nec. Facilisi nullam vehicula ipsum a arcu cursus vitae congue mauris.</p>
-  </aa-stack>
+  </section>
 
-  <aa-stack>
+  <section aa-stack>
     <label>Episode Title/Topic</label>
     <p>Storybook, NX, & Angular</p>
-  </aa-stack>
+  </section>
 
-  <aa-stack>
+  <section aa-stack>
     <label>Tags</label>
     <ul>
       <li>Angular</li>
@@ -37,26 +35,25 @@
       <li>UI</li>
       <li>Monorepo</li>
     </ul>
-  </aa-stack>
+  </section>
 
-  <!-- ALYSSA TODO: pass in element type and stack direction -->
-  <aa-stack>
+  <section aa-stack>
     <label>Available Hosts/Panelists</label>
     <ul>
       <li><a href="twitter.com/schwarty">Justin</a></li>
       <li><a href="twitter.com/brocco">Mike</a></li>
       <li><a href="twitter.com/alyssanicoll">Alyssa</a></li>
     </ul>
-  </aa-stack>
+  </section>
 
-  <aa-stack>
+  <section aa-stack>
     <label>Created On</label>
     <p>Jan. 14th 2022</p>
-  </aa-stack>
+  </section>
 
-  <aa-stack element="div" class="horizontal">
+  <section class="horizontal">
     <button aa-button>Reschedule</button>
     <button aa-button>Cancel</button>
-  </aa-stack>
+  </section>
 
 </main>
