--- a/libs/ui-common/src/lib/episode-details/episode-details.component.html
+++ b/libs/ui-common/src/lib/episode-details/episode-details.component.html
@@ -51,7 +51,7 @@
     <p>Jan. 14th 2022</p>
   </section>
 
-  <section class="horizontal">
+  <section aa-stack class="horizontal">
     <button aa-button>Reschedule</button>
     <button aa-button>Cancel</button>
   </section>
